UtahLiveDataTest/src/objects/FINETVendorLink__c.object
<CustomObject>
    <description>This is the custom object for the FINET Vendor Links</description>
    <fields>
        <fullName>AccountName__c</fullName>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>FINET Vendor Links</relationshipLabel>
        <relationshipName>FINET_Vendor_Links</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FINETVCUSTADD__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>FINETVCUSTADD</label>
        <referenceTo>R_AD__c</referenceTo>
        <relationshipLabel>FINET Vendor Links</relationshipLabel>
        <relationshipName>FINET_Vendor_Links</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FINETVCUST__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>FINETVCUST</label>
        <referenceTo>R_VEND_CUST__c</referenceTo>
        <relationshipLabel>FINET Vendor Links</relationshipLabel>
        <relationshipName>FINET_Vendor_Links</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>InternalAccount__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Agency</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>FINET Vendor Links (Account)</relationshipLabel>
        <relationshipName>FINETVendorLinks1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LEAID__c</fullName>
        <formula>Account__r.LEA_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LEAID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <label>Test</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VendorPaymentType__c</fullName>
        <label>Vendor Payment Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IET</fullName>
                </value>
                <value>
                    <fullName>GAX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>FINET Vendor Link</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>FINET Vendor Link Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FINET Vendor Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>